--- a/.google/cloudbuild-create-bucket-to-store-report.yaml
+++ b/.google/cloudbuild-create-bucket-to-store-report.yaml
@@ -1,6 +1,6 @@
 steps:
   - id: create bucket
     name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    args: [ 'gsutil', 'mb', '-c', 'standard', 'gs://${PROJECT_ID}_serenity_report' ]
+    args: [ 'gsutil', 'mb', '-l', 'europe-west3', '--retention', '3600s', 'gs://${PROJECT_ID}_serenity_report' ]
 
 # FIXME pass location as argument
