--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery</artifactId>
+            <version>2.10.7</version>
+        </dependency>
+
 
     </dependencies>
     <build>
