take screenshot in a step

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 serenity.project.name=Serenity and JUnit Quick Start Project
 serenity.test.root=com.example.e2e
-serenity.take.screenshots=DISABLED
+serenity.take.screenshots=FOR_FAILURES
 serenity.logging=VERBOSE
 serenity.console.headings=normal
