try custom fields

--- a/serenity.properties
+++ b/serenity.properties
@@ -4,3 +4,9 @@ serenity.test.root=com.example.e2e
 serenity.take.screenshots=FOR_FAILURES
 serenity.logging=VERBOSE
 serenity.console.headings=normal
+
+report.customfields.ApplicationVersion = 1.2.3
+report.customfields.environment = integration
+report.customfields.user = Shubham
+# report.customfields.host = ${HOST}
+report.customfields.order=ApplicationVersion,environment,user
