--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>google-cloud-bigquery</artifactId>
             <version>2.10.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v107</artifactId>
+            <version>4.6.0</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
