--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn -Dit.test=HelloWorldIT verify
+        continue-on-error: true
       - uses: actions/upload-artifact@v3
         with:
           name: report
