--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,10 +1,9 @@
 webdriver {
-  driver = chrome
-  capabilities {
-    browserName = "chrome"
-    "goog:chromeOptions" {
-      args = ["remote-allow-origins=*","test-type", "ignore-certificate-errors", "--window-size=1000,1300"
-        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
-    }
+  driver = provided
+  provided {
+    type = mydriver
+    mydriver = com.example.MyCustomDriver
   }
 }
+
+thucydides.driver.capabilities = mydriver
